--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -16,10 +16,7 @@
     "@types/react-vertical-timeline-component": "^3.3.6",
     "@types/uuid": "^10.0.0",
     "@vis.gl/react-google-maps": "^1.5.0",
-    "cloudinary": "^2.5.1",
     "framer-motion": "^12.0.1",
-    "mongodb": "^6.12.0",
-    "mongoose": "^8.9.5",
     "next": "15.1.4",
     "nodemailer": "^6.10.0",
     "react": "^18.2.0",
