--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-vertical-timeline-component": "^3.3.6",
     "@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "@vis.gl/react-google-maps": "^1.5.0",
     "framer-motion": "^12.0.1",
     "next": "15.1.4",
